# toplevel src CMake file

set(CMAKE_INCLUDE_CURRENT_DIR ON)
ADD_DEFINITIONS("-DPOCO_NO_AUTOMATIC_LIBS")
ADD_DEFINITIONS("-DPOCO_NO_UNWINDOWS")
ADD_DEFINITIONS("-D_WIN32_WINNT=0x0500")
ADD_DEFINITIONS("-DPOCO_STATIC")
ADD_DEFINITIONS("-DPCRE_STATIC")
ADD_DEFINITIONS("-DFoundation_EXPORTS")
ADD_DEFINITIONS("-DXML_NS")
ADD_DEFINITIONS("-DXML_DTD")
ADD_DEFINITIONS("-DHAVE_EXPAT_CONFIG_H")
ADD_DEFINITIONS("-DXML_STATIC")

add_subdirectory(json_spirit)
# add_subdirectory(libconfig)
add_subdirectory(server)
add_subdirectory(moFileReader)
add_subdirectory(Poco)
add_subdirectory(sqlite)

set(RepetierServer_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp" ${SERVER_SOURCES} PARENT_SCOPE)
