ADD_DEFINITIONS("-DPOCO_STATIC")
ADD_DEFINITIONS("-DPCRE_STATIC")
ADD_DEFINITIONS("-DFoundation_EXPORTS")
ADD_DEFINITIONS("-DXML_NS")
ADD_DEFINITIONS("-DXML_DTD")
ADD_DEFINITIONS("-DHAVE_EXPAT_CONFIG_H")
ADD_DEFINITIONS("-DXML_STATIC")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   # Mac OS X specific code
   ADD_DEFINITIONS( "-DPOCO_OS_FAMILY_UNIX=1")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    # Linux specific code
   ADD_DEFINITIONS( "-DPOCO_OS_FAMILY_UNIX=1")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
if(WIN32)
  ADD_DEFINITIONS( "-DPOCO_OS_FAMILY_WINDOWS=1")
ENDIF()

add_subdirectory("Foundation")
add_subdirectory("NET")
add_subdirectory("Util")
add_subdirectory("XML")
