set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB NET_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/include/Poco/Net/*.h)


INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("../Foundation/include")

ADD_DEFINITIONS("-DNet_EXPORTS")

ADD_LIBRARY(PocoNET STATIC ${NET_SOURCES})
