set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB XML_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/include/Poco/Util/*.h)


INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("../Foundation/include")

ADD_DEFINITIONS("-DXML_NS")
ADD_DEFINITIONS("-DXML_DTD")
ADD_DEFINITIONS("-DHAVE_EXPAT_CONFIG_H")

ADD_LIBRARY(PocoXML STATIC ${XML_SOURCES})
