set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB XML_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
	${CMAKE_CURRENT_SOURCE_DIR}/include/Poco/XML/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/include/Poco/DOM/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/include/Poco/SAX/*.h
  )

file(GLOB NO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/xmltok_*.c)
list(REMOVE_ITEM XML_SOURCES ${NO_SOURCES})


INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("../Foundation/include")

ADD_LIBRARY(PocoXML STATIC ${XML_SOURCES})
target_link_libraries(PocoXML PocoFoundation)
#add_custom_target(PocoXML SOURCES ${NO_SOURCES})